# HackathonService

./: .gitignore  Dockerfile  README.md  SYNC_PROCESS.md  compose.yaml  pyproject.toml  system-prompt.ts
src/ragger/: __init__.py  api.py  data.py  embed.py  main.py  preprocessor.py  query.py  system_prompt_data.md  test_data.md
